# VisionPipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.MD  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
model_repository/yolo/: config.pbtxt
src/: __init__.py
src/constants/: __init__.py  classes.py
src/core/: __init__.py  orchestrator.py  pipeline.py  shm_ring_buffer.py  visualizer.py
src/detectors/: __init__.py  base_detector.py  factory.py  onnx_detector.py  registry.py  triton_detector.py  ultralytics_detector.py
src/export/: model_exporter.py
src/types/: __init__.py  detections.py  input_size.py  protocols.py
src/utils/: __init__.py  cli.py  config_loader.py  container.py  input_size.py  model_manager.py  utils.py
